--- a/templates/SQLServer2019.xml
+++ b/templates/SQLServer2019.xml
@@ -6,11 +6,11 @@
   <Name>Microsoft SQL Server 2019</Name>
   <Description>
     An Unraid template for official MS release on DockerHub.[br]
-    https://hub.docker.com/_/microsoft-mssql-server
+    See here for details: https://hub.docker.com/_/microsoft-mssql-server
   </Description>
   <Overview>
     An Unraid template for official MS release on DockerHub.[br]
-    https://hub.docker.com/_/microsoft-mssql-server
+    See here for details: https://hub.docker.com/_/microsoft-mssql-server
   </Overview>
   <Support></Support>
   <Registry>https://registry.hub.docker.com/_/microsoft-mssql-server</Registry>
@@ -66,13 +66,18 @@
   </Environment>
   <Data>
     <Volume>
-      <HostDir>/mnt/cache/appdata/config</HostDir>
-      <ContainerDir>/appdata</ContainerDir>
+      <HostDir>/mnt/cache/appdata/config/data</HostDir>
+      <ContainerDir>/var/opt/mssql/data</ContainerDir>
       <Mode>rw</Mode>
     </Volume>
     <Volume>
-      <HostDir>/mnt/user</HostDir>
-      <ContainerDir>/userdata</ContainerDir>
+      <HostDir>/mnt/cache/appdata/config/log</HostDir>
+      <ContainerDir>/var/opt/mssql/log</ContainerDir>
+      <Mode>rw</Mode>
+    </Volume>
+    <Volume>
+      <HostDir>/mnt/cache/appdata/config/secrets</HostDir>
+      <ContainerDir>/var/opt/mssql/secrets</ContainerDir>
       <Mode>rw</Mode>
     </Volume>
   </Data>
