--- a/templates/SQLServer2019.xml
+++ b/templates/SQLServer2019.xml
@@ -82,6 +82,6 @@
     </Volume>
   </Data>
   <WebUI></WebUI>
-  <Icon>https://mcrflowprodcentralus.blob.core.windows.net/defaultlogo/Microsoft_logo.svg?sp%3Dr%26st%3D2019-01-19T00%3A10%3A26Z%26se%3D2033-11-04T07%3A10%3A26Z%26spr%3Dhttps%26sv%3D2018-03-28%26sig%3DdRn%252BJsqcKwsVdAMcdkzPAbydqSC%252BzBS9BwJUI9AflR4%253D%26sr%3Db</Icon>
+  <Icon>https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Microsoft_logo.svg/1200px-Microsoft_logo.svg.png</Icon>
   <ExtraParams></ExtraParams>
 </Containers>
