More attempted fix of repo/registry for update detection

--- a/templates/ms-sql-server-2019.xml
+++ b/templates/ms-sql-server-2019.xml
@@ -13,9 +13,9 @@
     See here for details: https://hub.docker.com/_/microsoft-mssql-server
   </Overview>
   <Support></Support>
-  <Registry>mcr.microsoft.com/mssql/server:2019-latest</Registry>
+  <Registry>https://registry.hub.docker.com/_/microsoft-mssql-server</Registry>
   <GitHub></GitHub>
-  <Repository>mcr.microsoft.com/mssql/server:2019-latest</Repository>
+  <Repository>mcr.microsoft.com/mssql/server</Repository>
   <Project></Project>
   <BindTime>true</BindTime>
   <Privileged>false</Privileged>
