--- a/templates/ms-sql-server-2019.xml
+++ b/templates/ms-sql-server-2019.xml
@@ -15,7 +15,7 @@
   <Support></Support>
   <Registry>https://registry.hub.docker.com/_/microsoft-mssql-server</Registry>
   <GitHub></GitHub>
-  <Repository>mcr.microsoft.com/mssql/server</Repository>
+  <Repository>https://mcr.microsoft.com/mssql/server:2019-latest</Repository>
   <Project></Project>
   <BindTime>true</BindTime>
   <Privileged>false</Privileged>
